# fashionmnist

./: README.md  pyproject.toml
config_files/: eval_config.yaml  train_config.yaml
notebooks/: eval.ipynb  train.ipynb
src/fashionmnist/: data_setup.py  eval.py  eval_utils.py  load_config.py  models.py  train.py  train_engine.py  utils.py
