[tool.poetry]
name = "fashionmnist-measurableenergy"
version = "0.1.0"
description = ""
authors = ["Reynald Havard <reynald.havard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
pre-commit = "^3.0.0"
flake8 = "^6.0.0"
black = "^22.12.0"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
tensorboard = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
